# discord_data

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: mypy.yml
discord_data/: __main__.py  merge.py  model.py  parse.py
scripts/: discord-messages-stats  stats
